update text area

--- a/HackDay/index.html
+++ b/HackDay/index.html
@@ -134,7 +134,7 @@
 
 				<div class="tile long">
 					<div class="tile-digit" id="MbxUsageDMLabel">N/A</div>
-					<div class="tile-description">Data Complete</div>
+					<div class="tile-description">Data Completeness</div>
 					<div class="tile-append">+0.04</div>
 				</div>
 
