Fix bugs for textareas

--- a/HackDay/index.html
+++ b/HackDay/index.html
@@ -146,7 +146,7 @@
             
 		</div>
 
-        <div style="float:left; width:300px; height:800px; position:fixed; top:86px; left:700px">
+        <div style="float:left; width:300px; height:800px; position:absolute; top:86px; left:700px">
             <textarea id="tenantsArea" rows="200" cols="20" style="background-color:lightgray; resize:none; height:800px; " readonly="readonly" ></textarea>
         </div>
 
