query DQ Table and LocationTable to get real data

--- a/HackDay/index.html
+++ b/HackDay/index.html
@@ -108,7 +108,7 @@
 
 				<div class="tile">
 					<div class="tile-digit" id="AvailabilityLabel3">N/A</div>
-					<div class="tile-description">8661?</div>
+					<div class="tile-description">8519 Total Request Count</div>
 				</div>
 
 				<div class="tile">
