--- a/HackDay/index.html
+++ b/HackDay/index.html
@@ -101,14 +101,14 @@
 					<div class="tile-description">Availability</div>
 				</div>
 
-				<div class="tile">
-					<div class="tile-digit" id="AvailabilityLabel2">N/A</div>
-					<div class="tile-description">8553?</div>
+                <div class="tile">
+					<div class="tile-digit" id="AvailabilityLabel3">N/A</div>
+					<div class="tile-description">Total Request</div>
 				</div>
 
 				<div class="tile">
-					<div class="tile-digit" id="AvailabilityLabel3">N/A</div>
-					<div class="tile-description">8519 Total Request Count</div>
+					<div class="tile-digit" id="AvailabilityLabel2">N/A</div>
+					<div class="tile-description">8553?</div>
 				</div>
 
 				<div class="tile">
