--- a/HackDay/index.html
+++ b/HackDay/index.html
@@ -108,7 +108,7 @@
 
 				<div class="tile">
 					<div class="tile-digit" id="AvailabilityLabel2">N/A</div>
-					<div class="tile-description">8553?</div>
+					<div class="tile-description">RWS Error</div>
 				</div>
 
 				<div class="tile">
