add basic scaleout portal

--- a/HackDay/actors.html
+++ b/HackDay/actors.html
@@ -11,7 +11,25 @@
 </head>
 <body>
     <div>
-        Hello Actors!
+        <h1>Spout</h1>
+        <div id = "spoutDiv">
+        </div>
+
+        <h1>TadIDGroupBolt</h1>
+        <div id = "tagIDDiv">
+        </div>
+
+        <h1>PageGroupBolt</h1>
+        <div id = "pageDiv">
+        </div>
+
+        <h1>CompletnessGroupBolt</h1>
+        <div id = "completenessDiv">
+        </div>
+
+        <h1>LocationBolt</h1>
+        <div id = "locationDiv">
+        </div>
     </div>
 
     <script>
